refactor : collect(Collector.toList()) -> toList()